<resources>
    <string name="app_name">MyTODO</string>
    <string name="empty_view_subtitle_text">Get started by adding a task</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_save">Save</string>

    <string name="action_settings">Settings</string>
    <string name="no_task_description">No task description</string>

    <string name="title_add_task">Add a task</string>
    <string name="title_edit_task">Edit task</string>

    <string name="dialog_unsaved_changes">Unsaved changes</string>
    <string name="dialog_leave_activity">Leave activity</string>
    <string name="dialog_keep_editing">Keep editing</string>
    <string name="dialog_delete_product">Delete this product?</string>
    <string name="dialog_delete_all">Delete all?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="editor_insert_task_successful">Task saved</string>
    <string name="editor_insert_task_failed">Error while saving task</string>
    <string name="editor_insert_all_task_info">Please, insert all required information</string>
    <string name="editor_delete_task_successful">Task deleted</string>
    <string name="editor_delete_task_failed">Error with deleting task</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="category_name">Task Name</string>
    <string name="category_description">Description</string>
    <string name="category_due_date">Due Date</string>
    <string name="category_priority">Priority</string>

    <string name="hint_task_name">Name</string>
    <string name="hint_task_description">Description</string>
    <string name="hint_task_date">Date</string>

    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>

</resources>

